@@ -1,6 +1,7 @@
 package io.github.anthem37.sql.rewriter.starter.tenant.support.interceptor;
 
 import io.github.anthem37.sql.rewriter.plugin.tenant.config.TenantConfig;
+import io.github.anthem37.sql.rewriter.plugin.tenant.util.TenantContext;
 import io.github.anthem37.sql.rewriter.plugin.tenant.util.TenantContextHolder;
 import io.github.anthem37.sql.rewriter.starter.tenant.annotation.TenantId;
 import io.github.anthem37.sql.rewriter.starter.tenant.annotation.TenantMapping;
@@ -11,6 +12,7 @@ import org.aspectj.lang.ProceedingJoinPoint;
 import org.aspectj.lang.annotation.Around;
 import org.aspectj.lang.annotation.Aspect;
 import org.aspectj.lang.reflect.MethodSignature;
+import org.springframework.aop.support.AopUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.ApplicationContext;
 import org.springframework.core.annotation.AnnotationUtils;
@@ -43,7 +45,16 @@ public class TenantContextAspect {
         Method method = signature.getMethod();
         Class<?> targetClass = pjp.getTarget() == null ? null : pjp.getTarget().getClass();
 
-        TenantMapping mapping = AnnotationUtils.findAnnotation(method, TenantMapping.class);
+        Method mostSpecificMethod = method;
+        if (targetClass != null) {
+            mostSpecificMethod = AopUtils.getMostSpecificMethod(method, targetClass);
+        }
+
+        TenantMapping mapping = AnnotationUtils.findAnnotation(mostSpecificMethod, TenantMapping.class);
+        if (mapping == null) {
+            // 兜底：注解可能直接标在接口方法上（实现类未显式标注）
+            mapping = AnnotationUtils.findAnnotation(method, TenantMapping.class);
+        }
         if (mapping == null && targetClass != null) {
             mapping = AnnotationUtils.findAnnotation(targetClass, TenantMapping.class);
         }
@@ -57,6 +68,19 @@ public class TenantContextAspect {
 
         // 1) resolve tenantId
         Object tenantId = resolveTenantId(tenantIdAnn);
+        // 约束：tenantId 无法解析时，跳过本次 SQL 重写。
+        //    为避免嵌套调用时复用到上层的 TenantContext，这里会在 proceed 期间临时清空 TenantContext。
+        if (tenantId == null) {
+            TenantConfig oldConfig = TenantContext.get();
+            TenantContext.remove();
+            try {
+                return pjp.proceed();
+            } finally {
+                if (oldConfig != null) {
+                    TenantContext.set(oldConfig);
+                }
+            }
+        }
         final Object tenantIdFinal = tenantId;
 
         // 2) build TenantConfig from targets
@@ -153,7 +177,7 @@ public class TenantContextAspect {
             // ignore and fallback to newInstance
         }
         try {
-            return providerClass.newInstance();
+            return providerClass.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             log.warn("Tenant provider 实例化失败: {}", providerClass, e);
             return null;
